--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,10 +13,20 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
+    <!-- Permiso para acceder a la ubicación (opcional pero recomendado para Places) -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:label="v3"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        
+        <!-- API Key de Google Places -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyApcSK58jVxe0m_QBfjtptqBvKI_-gKxvs"/>
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -50,7 +60,7 @@
          https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
 
          In particular, this is used by the Flutter engine in io.flutter.plugin.text.ProcessTextPlugin. -->
- <!-- Configuración para permitir que `url_launcher` abra URLs en Android -->
+    <!-- Configuración para permitir que `url_launcher` abra URLs en Android -->
     <queries>
         <intent>
             <action android:name="android.intent.action.VIEW"/>
