--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,20 +9,22 @@ environment:
 dependencies:
   cloud_firestore: ^5.6.5
   crypto: ^3.0.6
-  file_picker: ^9.0.2
+  file_picker: ^10.1.2
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
   firebase_messaging: ^15.2.4
   firebase_storage: ^12.4.4
   flutter:
     sdk: flutter
+  flutter_google_places_hoc081098: ^2.0.0
   flutter_localizations:
     sdk: flutter
   google_fonts: ^6.2.1
+  http: ^1.4.0
   image_picker: ^1.1.2
   intl: ^0.19.0
   path_provider: ^2.1.5
-  permission_handler: ^11.4.0
+  permission_handler: ^12.0.0+1
   shared_preferences: ^2.5.2
   url_launcher: ^6.3.1
 
