--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   cloud_firestore: ^5.6.5
   crypto: ^3.0.6
+  excel: ^4.0.6
   file_picker: ^10.1.2
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
