--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,14 @@ dependencies:
   http: ^1.4.0
   image_picker: ^1.1.2
   intl: ^0.19.0
+  open_file: ^3.5.10
   path_provider: ^2.1.5
+  pdf: ^3.11.3
   permission_handler: ^12.0.0+1
+  printing: ^5.14.2
+  share_plus: ^11.0.0
   shared_preferences: ^2.5.2
+  universal_html: ^2.2.4
   url_launcher: ^6.3.1
 
 dev_dependencies:
